--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="player-name" id="name-0">Player 1</div>
                 <div class="player-score" id="score-0">43</div>
                 <div class="player-current-box">
-                    <div class="player-current-label">Current</div>
+                    <div class="player-current-label">Round Score</div>
                     <div class="player-current-score" id="current-0">11</div>
                 </div>
             </div>
@@ -24,7 +24,7 @@
                 <div class="player-name" id="name-1">Player 2</div>
                 <div class="player-score" id="score-1">72</div>
                 <div class="player-current-box">
-                    <div class="player-current-label">Current</div>
+                    <div class="player-current-label">Round Score</div>
                     <div class="player-current-score" id="current-1">0</div>
                 </div>
             </div>
@@ -33,7 +33,8 @@
             <button class="btn-roll"><i class="ion-ios-loop"></i>Roll dice</button>
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
             
-            <img src="./src/images/dice-5.png" alt="Dice" class="dice">
+            <img src="./src/images/dice-1.png" alt="Dice" class="dice" id="dice-1">
+            <!-- <img src="./src/images/dice-1.png" alt="Dice" class="dice" id="dice-2">  -->
         </div>
         
         <script src="src/app.js"></script>
