New Ruels  + 1 more dice

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="wrapper clearfix">
             <div class="player-0-panel active">
                 <div class="player-name" id="name-0">Player 1</div>
-                <div class="player-score" id="score-0">43</div>
+                <div class="player-score" id="score-0">0</div>
                 <div class="player-current-box">
                     <div class="player-current-label">Round Score</div>
                     <div class="player-current-score" id="current-0">11</div>
@@ -28,7 +28,7 @@
             
             <div class="player-1-panel">
                 <div class="player-name" id="name-1">Player 2</div>
-                <div class="player-score" id="score-1">72</div>
+                <div class="player-score" id="score-1">0</div>
                 <div class="player-current-box">
                     <div class="player-current-label">Round Score</div>
                     <div class="player-current-score" id="current-1">0</div>
@@ -40,8 +40,9 @@
             <button class="btn-hold"><i class="ion-ios-download-outline"></i>Hold</button>
             
 
-            <input type="text" placeholder="Max Score" class="final-score" value="15">
+            <input type="text" placeholder="Max Score" class="final-score" value="50">
             <img src="./src/images/dice-1.png" alt="Dice" class="dice" id="dice-1">
+            <img src="./src/images/dice-1.png" alt="Dice" class="dice" id="dice-2">
 
             <div id="ex1" class="modal">
                 <p><strong>GAME RULES:</strong> <br>
