--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,600" rel="stylesheet" type="text/css">
         <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
         <link type="text/css" rel="stylesheet" href="./src/style.css">
-        
+
         <!-- Remember to include jQuery :) -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
         
@@ -53,12 +53,12 @@
             <div id="ex1" class="modal">
                 <p><strong>GAME RULES:</strong> <br>
 
-                 - The game has 2 players, playing in rounds <br>
-                 - In each turn, a player rolls a dice as many times as he whishes. Each result get added to his ROUND score <br>
-                 - There are two dices . The player looses his current score when one of them is a 1. After that, it's the next player's turn <br>
-                 - The player can choose to 'Hold', which means that his ROUND score gets added to his GLBAL score. After that, it's the next player's turn <br>
-                 - A player looses his ENTIRE score when he rolls two 6 in a row. After that, it's the next player's turn. <br>
-                 - The first player to reach <strong>maximum</strong> points on GLOBAL score wins the game<br>
+                - The game has 2 players, playing in rounds <br>
+                - In each turn, a player rolls the dices as many times as he wishes. Each result get added to his/her ROUND score <br>
+                - The player looses his current score when one of dices is a 1. After that, it's the next player's turn .<br>
+                - The player can choose to 'Hold', which means that his ROUND score gets added to his GLOBAL score. After that, it's the next player's turn <br>
+                - A player looses his ENTIRE GLOBAL SCORE when he rolls two 6's in a row. After that, it's the next player's turn.<br>
+                - The first player to reach maximum points on GLOBAL score wins the game<br>
                  </p>
                  <button><a  class="btn-new" style="color: firebrick; text-decoration: none" href="#" rel="modal:close"><i class="ion-coffee"></i>Close</a></button>
                  <br>
